--- a/locales/ru/translations.json
+++ b/locales/ru/translations.json
@@ -67,8 +67,8 @@
   "gender": {
     "choose": "Выбери пол компаньона:",
     "choose_gender": "Выбери пол компаньона:",
-    "gender_selected": "Выбран пол: {gender} 😊",
-    "toggle_gender": "Пол компаньона выбран: {gender} 😊",
+    "gender_selected": "Выбран пол: {gender} 😊\n\nТеперь вы можете начать общение! 💬",
+    "toggle_gender": "Пол компаньона выбран: {gender} 😊\n\nТеперь вы можете начать общение! 💬",
     "change_warning": "🔄 Вы уверены, что хотите сменить пол компаньона?\n\nВся история переписки будет удалена!",
     "change_confirmed": "История переписки удалена. Выбери пол компаньона:",
     "change_cancelled": "Смена пола отменена. Можете продолжить общение."
@@ -193,6 +193,7 @@
     "female": "Девушка 😊",
     "male": "Молодой человек 😉",
     "buy_premium": "Купить премиум 💳",
+    "extend_premium": "Продлить премиум 💳",
     "pay": "💳 Оплатить",
     "yes_change": "Да, сменить пол",
     "cancel": "Отмена",
@@ -213,5 +214,60 @@
   "ai_prompts": {
     "female": "Ты ИИ-девушка, флиртующая и supportive для одиноких людей. Будь милой, empathetic и игривой.",
     "male": "Ты ИИ-молодой человек, флиртующий и supportive для одиноких людей. Будь уверенным, empathetic и игривым."
+  },
+  "quiz": {
+    "start_text": "Привет! Давай познакомимся поближе. Я задам тебе несколько необычных вопросов, чтобы лучше понять твой характер и предпочтения. Это поможет мне общаться с тобой более осмысленно!",
+    "start_button": "Начать квиз ✨",
+    "questions": {
+      "landscape": "1/7 Выбери пейзаж, который тебе ближе:",
+      "superpower": "2/7 Какую суперспособность ты бы выбрал?",
+      "time_of_day": "3/7 Какое время суток тебе ближе?",
+      "book": "4/7 Какую книгу ты бы взял на необитаемый остров?",
+      "three_words": "5/7 Опиши себя тремя словами (напиши ответ сообщением):",
+      "rest": "6/7 Что для тебя идеальный отдых?",
+      "animal": "7/7 Какое животное тебе ближе по характеру?"
+    },
+    "options": {
+      "landscape_mountains": "🏔️ Горные вершины",
+      "landscape_ocean": "🌊 Океанский берег",
+      "landscape_forest": "🏞️ Тихий лес",
+      "landscape_city": "🌇 Городские огни",
+      "superpower_mind_reading": "🧠 Чтение мыслей",
+      "superpower_time_stop": "🕰️ Остановка времени",
+      "superpower_teleport": "✈️ Телепортация",
+      "superpower_immortality": "🐢 Бессмертие",
+      "time_morning": "🌅 Раннее утро",
+      "time_day": "☀️ День",
+      "time_evening": "🌇 Вечер",
+      "time_night": "🌙 Ночь",
+      "book_encyclopedia": "📚 Энциклопедия",
+      "book_detective": "📖 Детектив",
+      "book_novel": "📙 Роман",
+      "book_poetry": "📗 Поэзия",
+      "rest_party": "🎉 Вечеринка с друзьями",
+      "rest_home": "🎮 Игры/фильмы дома",
+      "rest_nature": "🏕️ Поход на природу",
+      "rest_reading": "📚 Чтение книги",
+      "animal_lion": "🦁 Лев",
+      "animal_fox": "🦊 Лиса",
+      "animal_dolphin": "🐬 Дельфин",
+      "animal_owl": "🦉 Сова"
+    },
+    "messages": {
+      "min_words": "Пожалуйста, напиши хотя бы два слова для описания себя",
+      "completion": "Спасибо за прохождение квиза! Вот что я узнал о тебе:\n\n{result}\n\nЭта информация поможет мне быть более полезным собеседником!",
+      "start_chatting": "Отлично! Теперь я знаю тебя лучше. Давай общаться! 😊\n\nПросто напиши мне что-нибудь, и я отвечу с учетом твоих предпочтений.",
+      "start_chatting_button": "Начать общение 💬"
+    },
+    "personality_traits": {
+      "adventurous": "• Ты авантюрист и любишь новые вызовы",
+      "analytical": "• У тебя аналитический склад ума",
+      "creative": "• Ты творческая личность",
+      "social": "• Ты общительный и социальный человек",
+      "introverted": "• Ты ценишь уединение и самоанализ",
+      "empathic": "• Ты empathetic и понимаешь других людей",
+      "practical": "• Ты практичный и реалистичный человек",
+      "free_spirited": "• Ты свободолюбивая личность"
+    }
   }
 }
