--- a/locales/sr/translations.json
+++ b/locales/sr/translations.json
@@ -64,11 +64,11 @@
   },
   "gender": {
     "choose": "Изабери пол сапутника:",
-    "toggle_gender": "Пол сапутника одабран: {gender} 😊",
+    "toggle_gender": "Пол сапутника одабран: {gender} 😊\n\nСада можете почети разговор! 💬",
     "change_warning": "🔄 Да ли сте сигурни да желите променити пол сапутника?\n\nЦела историја ћаскања ће бити обрисана!",
     "change_confirmed": "Историја ћаскања обрисана. Изабери пол сапутника:",
     "change_cancelled": "Промена пола отказана. Можеш наставити комуникацију.",
-    "gender_selected": "Odabran pol: {gender} 😊"
+    "gender_selected": "Odabran pol: {gender} 😊\n\nSada možete početi razgovor! 💬"
   },
   "messages": {
     "limit_exceeded": "Прекорачен дневни лимит бесплатних порука. Желиш неограничено? Купи премијум!",
@@ -188,6 +188,7 @@
     "female": "Девојка 😊",
     "male": "Младић 😉",
     "buy_premium": "Купи премијум 💳",
+    "extend_premium": "Продужи премијум 💳",
     "pay": "💳 Плати",
     "yes_change": "Да, промени пол",
     "cancel": "Откажи",
@@ -210,5 +211,60 @@
   "ai_prompts": {
     "female": "Ти си ИИ девојка која флертује и подржава усамљене људе. Буди слатка, емпатична и игрива.",
     "male": "Ти си ИИ младић који флертује и подржава усамљене људе. Буди самоуверен, емпатичан и игрив."
+  },
+  "quiz": {
+    "start_text": "Здраво! Упознајмо се боље. Поставићу ти неколико необичних питања да бих боље разумео твој карактер и преференце. То ће ми помоћи да комуницирам са тобом смисленије!",
+    "start_button": "Почни Квиз ✨",
+    "questions": {
+      "landscape": "1/7 Одабери пејзаж који ти је најближи:",
+      "superpower": "2/7 Коју супермоћ би изабрао?",
+      "time_of_day": "3/7 Које време дана ти је најближе?",
+      "book": "4/7 Коју књигу би понео на пусто острво?",
+      "three_words": "5/7 Опиши се у три речи (напиши одговор као поруку):",
+      "rest": "6/7 Шта је за тебе идеалан одмор?",
+      "animal": "7/7 Која животиња ти је најближа по карактеру?"
+    },
+    "options": {
+      "landscape_mountains": "🏔️ Планински врхови",
+      "landscape_ocean": "🌊 Океанска обала",
+      "landscape_forest": "🏞️ Тиха шума",
+      "landscape_city": "🌇 Градска светлост",
+      "superpower_mind_reading": "🧠 Читање мисли",
+      "superpower_time_stop": "🕰️ Заустављање времена",
+      "superpower_teleport": "✈️ Телепортација",
+      "superpower_immortality": "🐢 Бесмртност",
+      "time_morning": "🌅 Рано јутро",
+      "time_day": "☀️ Дан",
+      "time_evening": "🌇 Вече",
+      "time_night": "🌙 Ноћ",
+      "book_encyclopedia": "📚 Енциклопедија",
+      "book_detective": "📖 Детектив",
+      "book_novel": "📙 Роман",
+      "book_poetry": "📗 Поезија",
+      "rest_party": "🎉 Журка са пријатељима",
+      "rest_home": "🎮 Игре/филмови код куће",
+      "rest_nature": "🏕️ Излет у природу",
+      "rest_reading": "📚 Читање књиге",
+      "animal_lion": "🦁 Лав",
+      "animal_fox": "🦊 Лисица",
+      "animal_dolphin": "🐬 Делфин",
+      "animal_owl": "🦉 Сова"
+    },
+    "messages": {
+      "min_words": "Молим те, напиши бар две речи да се опишеш",
+      "completion": "Хвала што си урадио квиз! Ево шта сам сазнао о теби:\n\n{result}\n\nОве информације ће ми помоћи да будем кориснији саговорник!",
+      "start_chatting": "Одлично! Сада те боље знам. Причајмо! 😊\n\nСамо ми напиши нешто, а ја ћу одговорити узимајући у обзир твоје преференце.",
+      "start_chatting_button": "Почни Разговор 💬"
+    },
+    "personality_traits": {
+      "adventurous": "• Ти си авантуриста и волиш нове изазове",
+      "analytical": "• Имаш аналитички ум",
+      "creative": "• Ти си креативна особа",
+      "social": "• Ти си дружељубива и друштвена особа",
+      "introverted": "• Цениш самоћу и самоанализу",
+      "empathic": "• Ти си емпатична и разумеш друге људе",
+      "practical": "• Ти си практична и реалистична особа",
+      "free_spirited": "• Ти си слободоумна личност"
+    }
   }
 }
